--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   background: rgb(65,65,65);
-  background: linear-gradient(90deg, rgba(65,65,65,1) 0%, rgba(0,0,0,1) 50%, rgba(65,65,65,1) 100%);
+  background: linear-gradient(90deg, rgb(23, 23, 23) 0%, rgb(46, 26, 70) 50%, rgb(23, 23, 23) 100%)
   
   /* background-image: url("./rpg-bg.png");
   background-position: center;
@@ -34,8 +34,8 @@ code {
   color: rgba(255, 255, 255, 0.8);
 }
 
-.active {
-    color: rgba(255, 255, 255, .8);
+.currentNav {
+    color: rgba(255, 255, 255, 1) !important;
 }
 
 .navbarLinkIcon {
@@ -56,6 +56,11 @@ code {
     background-color: rgba(94,53,152,1)
 }
 
+.svg-footer {
+    position: absolute;
+    bottom: -20px;
+    z-index: -1;
+}
 
 .logo{
   transition: width .5s;
