--- a/client/src/components/ConsoleGameList/ConsoleGameList.css
+++ b/client/src/components/ConsoleGameList/ConsoleGameList.css
@@ -2,3 +2,23 @@ body{
     background: rgb(65,65,65);
 background: linear-gradient(90deg, rgba(65,65,65,1) 0%, rgba(0,0,0,1) 50%, rgba(65,65,65,1) 100%);
 }
+
+.sortIcon{
+    right: 8px;
+    bottom: 8px;
+    font-size: 22px;
+    position: absolute;
+}
+.sortIconFade {
+    color: rgba(255, 255, 255, 0.2);
+}
+
+
+.data-table-head{
+    position: relative;
+    cursor: pointer;
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+}
