--- a/client/src/components/ConsoleGameList/ConsoleGameList.css
+++ b/client/src/components/ConsoleGameList/ConsoleGameList.css
@@ -13,6 +13,9 @@ background: linear-gradient(90deg, rgba(65,65,65,1) 0%, rgba(0,0,0,1) 50%, rgba(
     color: rgba(255, 255, 255, 0.2);
 }
 
+.data-table-head-min{
+    min-width: 110px;
+}
 
 .data-table-head{
     position: relative;
