--- a/client/src/index.css
+++ b/client/src/index.css
@@ -56,6 +56,14 @@ code {
     background-color: rgba(94,53,152,1)
 }
 
+img{
+  backface-visibility: hidden;
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+}
+
 .svg-footer {
     position: absolute;
     bottom: -20px;
