--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,6 +24,14 @@
   color: white;
 }
 
+img{
+  backface-visibility: hidden;
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+}
+
 .App-link {
   color: #61dafb;
 }
