--- a/client/src/components/ConsoleGameList/ConsoleGameList.css
+++ b/client/src/components/ConsoleGameList/ConsoleGameList.css
@@ -25,3 +25,9 @@ background: linear-gradient(90deg, rgba(65,65,65,1) 0%, rgba(0,0,0,1) 50%, rgba(
     -ms-user-select: none; /* IE10+/Edge */
     user-select: none; /* Standard */
 }
+
+@media only screen and (max-width: 770px) {
+  .CatagoryMain{
+      overflow: overlay;
+  }
+}
