--- a/client/src/index.css
+++ b/client/src/index.css
@@ -85,3 +85,13 @@ img{
 .logo{
   transition: width .5s;
 }
+
+@media only screen and (max-width: 770px) {
+  .RandomNavbar{
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  .nav-link {
+    font-size: 16px;
+  }
+}
